--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,5 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "icons": [{
-    "src": "evn_logo.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }]
+  "icons":[{"src":"evn_logo.png","sizes":"192x192","type":"image/png"}]
 }
