--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,23 @@
 {
   "name": "Crew Check-In",
   "short_name": "Check-In",
+  "description": "Ứng dụng ghi nhận vị trí ca trực nhân viên EVN SPC, cho phép check-in/check-out và theo dõi bản đồ.",
   "start_url": ".",
+  "scope": ".",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#ffffff",
-  "icons":[{"src":"evn_logo.png","sizes":"192x192","type":"image/png"}]
+  "theme_color": "#0078D7",
+  "icons": [
+    {
+      "src": "evn_logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "evn_logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
